--- a/app/views/meetings/_attributes.html.erb
+++ b/app/views/meetings/_attributes.html.erb
@@ -1,5 +1,10 @@
 <%= labelled_fields_for :meeting, @meeting do |f| %>
 
+    <% if @meeting.safe_attribute? 'location' %>
+        <p><%= f.check_box :location, :required => true %> </p>
+        <p><%= text_field_tag :meeting_location_online, @meeting.location_online,
+                              name: 'meeting[location_online]', disabled: @meeting.location?, :maxlength => 255, size: 255%> </p>
+    <% end %>
     <div class="splitcontent">
       <div class="splitcontentleft">
         <% if @meeting.safe_attribute? 'date' %>
@@ -19,19 +24,11 @@
         <% if @meeting.safe_attribute? 'recurring_time' %>
             <p id="">
             <p>
-              <% recurring = [['single recurring', 1], ['weekly recurring', 2]] %>
+              <% recurring = [['single recurring', 1], ['Daily', 3], ['weekly recurring', 2]] %>
               <%= f.select :recurring_time, options_for_select(recurring, @meeting.recurring_time), :required => true %> </p>
             <p><%= select_tag :recurring_week_days, options_for_select((1..7).map {|d| [day_name(d), d.to_s]}, (eval("#{@meeting.recurring_week_days}").presence||[]).map(&:to_i)), {:multiple => true} %></p>
             </p>
         <% end %>
-
-        <% if @meeting.safe_attribute? 'location' %>
-            <p><%= f.check_box :location, :required => true %> </p>
-            <p><%= text_field_tag :meeting_location_online, @meeting.location_online,
-                                  name: 'meeting[location_online]', disabled: @meeting.location? %> </p>
-        <% end %>
-
-
         <% user = @project.users.map{|user| [user.name, user.id]} %>
         <p><label> <%= l(:field_participants) %></label>
           <%= select_tag :users, options_for_select(user, @meeting.users.map(&:id)), :required => true, multiple: true %> </p>
@@ -101,7 +98,23 @@
     })
     $('#meeting_location').on('change', function(){
       $('#meeting_location_online').attr('disabled', $('#meeting_location').prop('checked'))
+    });
+    $('#meeting_recurring_time').on('change', function(e){
+      display_option()
     })
-  })
+    display_option();
+  });
+    function display_option()
+    {
+      v = $('#meeting_recurring_time').val();
+      if(v == '1' || v == '3')
+      {
+        $('#recurring_week_days').hide();
+      }
+      else {
+        $('#recurring_week_days').show();
+      }
+
+    }
 </script>
 <% include_calendar_headers_tags %>
