--- a/app/views/meetings/_action_menu.html.erb
+++ b/app/views/meetings/_action_menu.html.erb
@@ -1,4 +1,5 @@
 <div class="contextual">
+  <%= link_to('Manage meetings', project_meetings_path(@project)) if params[:action] == 'calendar' and params[:action] != 'index' %>
   <%= link_to( 'new meeting', new_project_meeting_path(@project) , class: 'icon icon-add') if User.current.allowed_to?(:create_meeting, @project)  %>
   <%= link_to( 'Edit meeting', edit_project_meeting_path(@project, @meeting) , class: 'icon icon-edit') if User.current.allowed_to?(:edit_meeting, @project) and @meeting && @meeting.editable_by?(User.current)  %>
   <%= link_to( 'Calendar',   {:controller => 'meetings', :action => 'calendar'}, class: 'icon icon-calendar') if User.current.allowed_to?(:view_meeting_calendar, @project)  %>
