--- a/app/views/meetings/_calendar.html.erb
+++ b/app/views/meetings/_calendar.html.erb
@@ -8,11 +8,11 @@
     <% day = calendar.startdt
        while day <= calendar.enddt %>
         <%= ("<td class='week-number' title='#{ l(:label_week) }'>#{(day+(11-day.cwday)%7).cweek}</td>".html_safe) if day.cwday == calendar.first_wday %>
-        <td class="<%= day.month==calendar.month ? 'even' : 'odd' %><%= ' today' if Date.today == day %>">
+        <td class="<%= day.month==calendar.month ? 'even' : 'odd' %><%= ' today' if Date.today == day %> calendar_day">
           <p class="day-num"><%= day.day %></p>
           <% @events.select{|meeting|
             meeting.can_show?(day)
-          }.each do |i| %>
+          }.sort_by{|a| a.start_time}.each do |i| %>
               <div class="issue tooltip" >
                 <%= image_tag('group.png') %>
                 <%= h("#{i.project} -") unless @project && @project == i.project %>
