--- a/app/views/meetings/_set_recurring.html.erb
+++ b/app/views/meetings/_set_recurring.html.erb
@@ -29,7 +29,7 @@
       display_option()
     });
     display_option();
-    $('#schedule_monthly_recurring_').multiDatesPicker();
+    $('#schedule_monthly_recurring_').multiDatesPicker({dateFormat: "m/d/y"});
   });
 
 
